<resources>
    <string name="app_name">Bal</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="gestion_bal">Gestion Bal</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="todo">TODO</string>
    <string name="identifiant">Identifiant</string>
    <string name="refuser">Refuser</string>
    <string name="valider">Valider</string>
    <string name="scan">Scan</string>
    <string name="liste">Liste</string>
</resources>